--- a/app/templates/residente/vehiculos/detalles.html
+++ b/app/templates/residente/vehiculos/detalles.html
@@ -200,16 +200,16 @@
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
-                            {{ form.idTipoArchivo.label_tag }}
-                            {{ form.idTipoArchivo }}
+                            {{ form.id_tipo_archivo.label_tag }}
+                            {{ form.id_tipo_archivo }}
                         </div>
                         <div class="form-group">
-                            {{ form.fechaVencimiento.label_tag }}
-                            {{ form.fechaVencimiento }}
+                            {{ form.fecha_vencimiento.label_tag }}
+                            {{ form.fecha_vencimiento }}
                         </div>
                         <div class="form-group">
-                            {{ form.archivo.label_tag }}
-                            {{ form.archivo }}
+                            {{ form.ruta_archivo.label_tag }}
+                            {{ form.ruta_archivo }}
                         </div>
                     </div>
                     <div class="modal-footer">
@@ -235,16 +235,16 @@
                     <form method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="form-group">
-                            {{ form.idTipoArchivo.label_tag }}
-                            {{ form.idTipoArchivo }}
+                            {{ form.id_tipo_archivo.label_tag }}
+                            {{ form.id_tipo_archivo }}
                         </div>
                         <div class="form-group">
-                            {{ form.archivo.label_tag }}
-                            {{ form.archivo }}
+                            {{ form.ruta_archivo.label_tag }}
+                            {{ form.ruta_archivo }}
                         </div>
                         <div class="form-group">
-                            {{ form.fechaVencimiento.label_tag }}
-                            {{ form.fechaVencimiento }}
+                            {{ form.fecha_vencimiento.label_tag }}
+                            {{ form.fecha_vencimiento }}
                         </div>
                         <button type="submit" class="btn-modern w-100">
                             <i class="fas fa-upload"></i> Subir Archivo
