--- a/app/templates/residente/vehiculos/detalles.html
+++ b/app/templates/residente/vehiculos/detalles.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -150,18 +151,18 @@
                             <tbody>
                                 {% for archivo in archivos %}
                                 <tr>
-                                    <td>{{ archivo.id_tipo_archivo.tipo_documento }}</td>
+                                    <td>{{ archivo.idTipoArchivo.tipo_documento }}</td>
                                     <td>
-                                        <a href="{{ archivo.ruta_archivo.url }}" target="_blank" class="btn-modern btn-sm">
+                                        <a href="{{ archivo.archivo.url }}" target="_blank" class="btn-modern btn-sm">
                                             <i class="fas fa-eye"></i> Ver Archivo
                                         </a>
                                     </td>
-                                    <td>{{ archivo.fecha_subida|date:"d/m/Y H:i" }}</td>
-                                    <td>{{ archivo.fecha_vencimiento|default:"-" }}</td>
+                                    <td>{{ archivo.fechaSubida|date:"d/m/Y H:i" }}</td>
+                                    <td>{{ archivo.fechaVencimiento|default:"-" }}</td>
                                     <td>
                                         <button type="button" class="btn-modern btn-sm"
-                                            data-tipo="{{ archivo.id_tipo_archivo.pk }}"
-                                            data-fecha="{{ archivo.fecha_vencimiento|default_if_none:''|date:'Y-m-d' }}"
+                                            data-tipo="{{ archivo.idTipoArchivo.pk }}"
+                                            data-fecha="{{ archivo.fechaVencimiento|default_if_none:''|date:'Y-m-d' }}"
                                             onclick="abrirModalActualizarBtn(this)">
                                             <i class="fas fa-edit"></i> Actualizar
                                         </button>
@@ -187,40 +188,69 @@
         </div>
     </main>
 
-    <!-- Modal flotante para registrar archivo -->
-    <div class="modal fade" id="archivoModal" tabindex="-1" aria-hidden="true">
+    <!-- Modal para registrar/actualizar archivo -->
+    <div class="modal fade" id="modalArchivo" tabindex="-1" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
-                    <input type="hidden" name="id_vehiculo" value="{{ vehiculo.id_vehiculo_residente }}">
                     <div class="modal-header">
-                        <h5 class="modal-title">
-                            <i class="fas fa-file-upload"></i> Registrar Archivo
-                        </h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <h5 class="modal-title">Registrar/Actualizar Archivo</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
-                            {{ form.id_tipo_archivo.label_tag }}
-                            {{ form.id_tipo_archivo }}
+                            {{ form.idTipoArchivo.label_tag }}
+                            {{ form.idTipoArchivo }}
                         </div>
                         <div class="form-group">
-                            {{ form.ruta_archivo.label_tag }}
-                            {{ form.ruta_archivo }}
+                            {{ form.fechaVencimiento.label_tag }}
+                            {{ form.fechaVencimiento }}
                         </div>
                         <div class="form-group">
-                            {{ form.fecha_vencimiento.label_tag }}
-                            {{ form.fecha_vencimiento }}
+                            {{ form.archivo.label_tag }}
+                            {{ form.archivo }}
                         </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn-modern btn-secondary-modern" data-bs-dismiss="modal">Cerrar</button>
+                        <button type="submit" id="submitArchivoBtn" class="btn-modern">Registrar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal flotante -->
+    <div class="modal fade" id="archivoModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">
+                        <i class="fas fa-file-upload"></i> Registrar Archivo
+                    </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            {{ form.idTipoArchivo.label_tag }}
+                            {{ form.idTipoArchivo }}
+                        </div>
+                        <div class="form-group">
+                            {{ form.archivo.label_tag }}
+                            {{ form.archivo }}
+                        </div>
+                        <div class="form-group">
+                            {{ form.fechaVencimiento.label_tag }}
+                            {{ form.fechaVencimiento }}
+                        </div>
                         <button type="submit" class="btn-modern w-100">
                             <i class="fas fa-upload"></i> Subir Archivo
                         </button>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
