Correcion de archivos 20

--- a/app/templates/usuario/register.html
+++ b/app/templates/usuario/register.html
@@ -13,7 +13,7 @@
       <!-- Imagen izquierda -->
       <div class="image-side">
         <img
-          src="{% static '/IMG/imagen-register.jpg' %}"
+          src="{% static 'img/imagen-register.jpg' %}"
           alt="Altos de Fontibón"
         />
       </div>
@@ -22,7 +22,7 @@
       <div class="form-side">
         <div class="logo">
           <img
-            src="{% static '/IMG/Logo Fontibon - 1.jpg' %}"
+            src="{% static '/img/Logo Fontibon - 1.jpg' %}"
             alt="Altos de Fontibón"
           />
           <h1>¡Fontibón Contigo!</h1>
