--- a/app/templates/usuario/index.html
+++ b/app/templates/usuario/index.html
@@ -74,7 +74,7 @@
         <div class="carousel-slides">
             <!-- Slide 1 -->
             <div class="carousel-slide">
-                <img src="{% static 'IMG/fondo5.WEBP' %}" id="inicio" alt="Paisaje montañoso">
+                <img src="{% static 'img/fondo5.WEBP' %}" id="inicio" alt="Paisaje montañoso">
                 <div class="slide-content">
                     <h2>Altos de Fontibon</h2>
                     <p>Conoce sobre nosotros y nuestros lugares</p>
@@ -83,7 +83,7 @@
             </div>
             <!-- Slide 2 -->
             <div class="carousel-slide">
-                <img src="{% static 'IMG/noticia.jpg' %}" alt="Bosque nevado">
+                <img src="{% static 'img/noticia.jpg' %}" alt="Bosque nevado">
                 <div class="slide-content">
                     <h2>Nuestros Espacios</h2>
                     <p>Conoce todo los espacios que preparamos para ti</p>
@@ -92,7 +92,7 @@
             </div>
             <!-- Slide 3 -->
             <div class="carousel-slide">
-                <img src="{% static 'IMG/contacto.jpg' %}" alt="Bosque nevado">
+                <img src="{% static 'img/contacto.jpg' %}" alt="Bosque nevado">
                 <div class="slide-content">
                     <h2>Testiomios</h2>
                     <p>Contempla las opiniones que la gente tiene sobre nosotros</p>
@@ -136,7 +136,7 @@
                 <!-- Card 1 -->
                 <div class="card" data-card="1">
                     <div class="card-image">
-                        <img src="{% static 'IMG/model2.jpg' %}" alt="Zonas Comunes">
+                        <img src="{% static 'img/model2.jpg' %}" alt="Zonas Comunes">
                     </div>
                     <div class="card-content">
                         <h3 class="card-title">Zonas Comunes</h3>
@@ -146,7 +146,7 @@
                 <!-- Card 2 -->
                 <div class="card" data-card="2">
                     <div class="card-image">
-                        <img src="{% static 'IMG/model1.jpg' %}" alt="Portal de Noticias">
+                        <img src="{% static 'img/model1.jpg' %}" alt="Portal de Noticias">
                     </div>
                     <div class="card-content">
                         <h3 class="card-title">Portal de noticias</h3>
@@ -156,7 +156,7 @@
                 <!-- Card 3 -->
                 <div class="card" data-card="3">
                     <div class="card-image">
-                        <img src="{% static 'IMG/model3.jpg' %}" alt="Sorteo Parqueadero">
+                        <img src="{% static 'img/model3.jpg' %}" alt="Sorteo Parqueadero">
                     </div>
                     <div class="card-content">
                         <h3 class="card-title">Sorteo de Parqueadero</h3>
@@ -166,7 +166,7 @@
                 <!-- Card 4 -->
                 <div class="card" data-card="4">
                     <div class="card-image">
-                        <img src="{% static 'IMG/modal4.jpg' %}" alt="Aventuras Extremas">
+                        <img src="{% static 'img/modal4.jpg' %}" alt="Aventuras Extremas">
                     </div>
                     <div class="card-content">
                         <h3 class="card-title">Eventos por fecha</h3>
@@ -183,13 +183,13 @@
             <div class="modal-carousel">
                 <div class="modal-carousel-slides">
                     <div class="modal-carousel-slide">
-                        <img src="{% static 'IMG/modal1.1.jpg' %}" alt="Zona común 1">
+                        <img src="{% static 'img/modal1.1.jpg' %}" alt="Zona común 1">
                     </div>
                     <div class="modal-carousel-slide">
-                        <img src="{% static 'IMG/modal1.2.webp' %}" alt="Zona común 2">
+                        <img src="{% static 'img/modal1.2.webp' %}" alt="Zona común 2">
                     </div>
                     <div class="modal-carousel-slide">
-                        <img src="{% static 'IMG/modal1.3.jpg' %}" alt="Zona común 3">
+                        <img src="{% static 'img/modal1.3.jpg' %}" alt="Zona común 3">
                     </div>
                 </div>
                 <div class="modal-carousel-controls">
@@ -214,10 +214,10 @@
             <div class="modal-carousel">
                 <div class="modal-carousel-slides">
                     <div class="modal-carousel-slide">
-                        <img src="{% static 'IMG/modal2.1.jpg' %}" alt="Noticias 1">
+                        <img src="{% static 'img/modal2.1.jpg' %}" alt="Noticias 1">
                     </div>
                     <div class="modal-carousel-slide">
-                        <img src="{% static 'IMG/modal2.2.jpg' %}" alt="Noticias 2">
+                        <img src="{% static 'img/modal2.2.jpg' %}" alt="Noticias 2">
                     </div>
                 </div>
                 <div class="modal-carousel-controls">
@@ -241,10 +241,10 @@
             <div class="modal-carousel">
                 <div class="modal-carousel-slides">
                     <div class="modal-carousel-slide">
-                        <img src="{% static 'IMG/modal3.1.jpg' %}" alt="Parqueadero 1">
+                        <img src="{% static 'img/modal3.1.jpg' %}" alt="Parqueadero 1">
                     </div>
                     <div class="modal-carousel-slide">
-                        <img src="{% static 'IMG/modal3..2.jpg' %}" alt="Parqueadero 2">
+                        <img src="{% static 'img/modal3..2.jpg' %}" alt="Parqueadero 2">
                     </div>
                 </div>
                 <div class="modal-carousel-controls">
@@ -268,10 +268,10 @@
             <div class="modal-carousel">
                 <div class="modal-carousel-slides">
                     <div class="modal-carousel-slide">
-                        <img src="{% static 'IMG/modal4.1.jpg' %}" alt="Aventura 1">
+                        <img src="{% static 'img/modal4.1.jpg' %}" alt="Aventura 1">
                     </div>
                     <div class="modal-carousel-slide">
-                        <img src="{% static 'IMG/modal4.2.jpg' %}" alt="Aventura 2">
+                        <img src="{% static 'img/modal4.2.jpg' %}" alt="Aventura 2">
                     </div>
                 </div>
                 <div class="modal-carousel-controls">
