--- a/app/templates/usuario/index.html
+++ b/app/templates/usuario/index.html
@@ -74,7 +74,7 @@
         <div class="carousel-slides">
             <!-- Slide 1 -->
             <div class="carousel-slide">
-                <img src="{% static 'img/fondo5.WEBP' %}" id="inicio" alt="Paisaje montañoso">
+                <img src="{% static 'img/fondo5.webp' %}" id="inicio" alt="Paisaje montañoso">
                 <div class="slide-content">
                     <h2>Altos de Fontibon</h2>
                     <p>Conoce sobre nosotros y nuestros lugares</p>
