--- a/app/templates/residente/detalles_residente/noticias.html
+++ b/app/templates/residente/detalles_residente/noticias.html
@@ -100,16 +100,18 @@
 
     <!-- Contenido Principal -->
     <main class="main-content" id="mainContent">
-        <div class="content-header">
+        
+        <div class="content-header mb-4">
             <h1 class="page-title">
                 <i class="fas fa-newspaper"></i>
                 Noticias
             </h1>
         </div>
 
-        <div id="noticiasContainer" clase="mt-4">
+        <div id="noticiasContainer" clase="mt-5">
             {% include 'residente/detalles_residente/_noticias_list.html' %}
         </div>
+    
     </main>
 
     <!-- Bootstrap JS -->
