--- a/app/templates/residente/detalles_residente/noticias.html
+++ b/app/templates/residente/detalles_residente/noticias.html
@@ -108,9 +108,11 @@
             </h1>
         </div>
 
-        <div id="noticiasContainer" clase="m-5">
-            {% include 'residente/detalles_residente/_noticias_list.html' %}
+        <div id="contenedor-noticias" class="mt-5 mb-5 m-5">
+            {% include "residente/detalles_residente/_noticias_list.html" %}
         </div>
+        
+        <div id="notificaciones"></div>
     
     </main>
 
